# income-calculator-rust

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
